# talirt

./: .gitignore  __init__.py  build.sh  input.txt  input_simulator.txt  readme.md  requirements.txt  run.py  run_cf.py  run_cf_irt.py  setup.py  start.sh  start_test_model.sh  start_test_simulator.sh
data/: create_table.hive  json2hive.py  mkt_answer.py  pred_cf.pickle  start_mkt_answer.sh  theta_irt.pickle
docs/: Makefile  conf.py  index.rst  make.bat
docs/pdf/: 基于认知诊断的个性化试题推荐方法_朱天宇.caj
docs/source/: important.rst  other.rst  概览.rst  论文概览.rst
model/: __init__.py  bkt.py  cdm.py  irt.py  metrics.py  simulator.py
online/: recomm_param.py  run_recomm.py  test_recomm.py  train_server.py
pyedm/: __init__.py
pyedm/data/: kddcup2010.py  social_life_feelings.py
pyedm/experiment/: kddcup.py
pyedm/model/: __init__.py  metrics.py  simulator.py
pyedm/model/bkt/_bkt/: CMakeLists.txt  TrainHelper.cpp  TrainHelper.h  _bkt.cpp  _bkt.h  _hmm.cpp  _hmm.h  bkt.cpp  bkt.h  hmm.cpp  hmm.h  man.cpp  utils.h
pyedm/utils/: __init__.py  pymc.py
reco_accu_pred/: __init__.py  run.py
reco_accu_pred/data/: P.csv  Q.csv  data_hive.csv  result.csv
reco_accu_pred/evaluate/: __init__.py  evaluate_.py
reco_accu_pred/model/: __init__.py  col_fil.py  (+1 more)
script/: 知识点到excel.ipynb  课次-知识点正确率分析.ipynb
shell/: upload_python3.sh
talirt/: __init__.py
test/: __init__.py  input.txt  input_simulator.txt  start_test_model.sh  start_test_simulator.sh  test_irt.py  test_model.py  test_simulator.py
unittest/: test_irt.py
utils/: data.py  irt.py  pymc.py  utils.py
(+129 files in other folders)
